# daily-findings

./: .gitignore  CHANGELOG.md  COMMUNITY_QUICKSTART_COPY.md  DISTRIBUTION.md  README.md  TESTING_CHECKLIST.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
.github/: dependabot.yml
.github/workflows/: desktop-build.yml  test.yml
data/: curriculum.json  grc-curriculum.schema.json
data/curricula/: ai-governance.json  audit.json  compliance.json  controls.json  data-governance.json  frameworks.json  grc-engineering.json  incident.json  paths.json  policy.json  privacy.json  risk.json  tprm.json
prisma/: schema.prisma
scripts/: check-secrets.mjs  compute-quiz-analytics.ts  doctor.mjs  export-release-library.ts  fix-sections.ts  fix-targeted.ts  generate-checksums.mjs  generate-library.ts  generate-release-metadata.mjs  generate-schema-library.ts  monitor.ts  normalize-content-and-data.ts  notarize-macos.mjs  prepare-tauri-sidecar.mjs  qa-exhaustive-ui.mjs  qa-playwright.mjs  quiz-analytics-report.ts  seed-expanded-library.ts  seed-release-library.ts  smoke-tests.mjs  start-standalone.mjs  validate-curriculum.ts  verify-build.mjs  verify-library-quality.mjs
scripts/lib/: presentation-generator.ts  schema-generator.ts
src/: instrumentation.ts  middleware.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: ai.ts  animations.ts  configure-monaco.ts  curriculum.ts  db.ts  domain-colors.ts  (+2 more)
(+42 files in other folders)
