[package]
name = "grc-daily-desktop"
version = "0.1.0"
description = "GRC Learning Platform desktop wrapper"
authors = ["Chad Fryer"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = [] }
